// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PanelBackgroundIcon - tests > should render the component correctly when \`size\` is \`large\` > when size is large 1`] = `
<DocumentFragment>
  <div
    class="style={}
"
  >
    <div
      class="style={
  alignItems: 'center',
  background: '#A3AEF5',
  borderRadius: '50%',
  display: 'flex',
  flexShrink: 0,
  height: '32px',
  justifyContent: 'center',
  padding: 0,
  width: '32px',
}
"
      data-testid="background-icon-next--wrapper"
    >
      <svg
        aria-hidden="true"
        color="#334199"
        data-testid="background-icon-next--icon"
        fill="currentColor"
        focusable="false"
        height="16px"
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 16 16"
        width="16px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8,3.3l1.4,2.8l0.2,0.5l0.5,0.1l3.1,0.4L11,9.2l-0.4,0.4l0.1,0.5l0.5,3.1l-2.8-1.4L8,11.5l-0.5,0.2l-2.8,1.4l0.5-3.1 l0.1-0.5L5,9.2L2.8,7l3.1-0.4l0.5-0.1L6.6,6L8,3.3 M8,1L5.7,5.6L0.6,6.3l3.7,3.6L3.5,15L8,12.6l4.6,2.4l-0.9-5.1l3.7-3.6l-5.1-0.7 L8,1z"
        />
      </svg>
    </div>
  </div>
  <div
    class="style={}
"
  />
</DocumentFragment>
`;

exports[`PanelBackgroundIcon - tests > should render the component correctly when \`size\` is \`small\` > when size is small 1`] = `
<DocumentFragment>
  <div
    class="style={}
"
  >
    <div
      class="style={
  alignItems: 'center',
  background: '#A3AEF5',
  borderRadius: '50%',
  display: 'flex',
  flexShrink: 0,
  height: '24px',
  justifyContent: 'center',
  padding: 0,
  width: '24px',
}
"
      data-testid="background-icon-next--wrapper"
    >
      <svg
        aria-hidden="true"
        color="#334199"
        data-testid="background-icon-next--icon"
        fill="currentColor"
        focusable="false"
        height="16px"
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 16 16"
        width="16px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8,3.3l1.4,2.8l0.2,0.5l0.5,0.1l3.1,0.4L11,9.2l-0.4,0.4l0.1,0.5l0.5,3.1l-2.8-1.4L8,11.5l-0.5,0.2l-2.8,1.4l0.5-3.1 l0.1-0.5L5,9.2L2.8,7l3.1-0.4l0.5-0.1L6.6,6L8,3.3 M8,1L5.7,5.6L0.6,6.3l3.7,3.6L3.5,15L8,12.6l4.6,2.4l-0.9-5.1l3.7-3.6l-5.1-0.7 L8,1z"
        />
      </svg>
    </div>
  </div>
  <div
    class="style={}
"
  />
</DocumentFragment>
`;
